--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "canvas": "^2.11.2",
     "colortranslator": "^1.9.2",
     "deepmerge": "^4.2.2",
     "docx": "^7.8.2",
