--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "axios-rate-limit": "^1.3.0",
+    "axios-retry": "^3.5.1",
     "canvas": "^2.11.2",
     "colortranslator": "^1.9.2",
     "deepmerge": "^4.2.2",
