feat: html clean by dompurify

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["Twip"]
+  "cSpell.words": [
+    "AUTOFIT",
+    "colortranslator",
+    "deepmerge",
+    "dompurify",
+    "Twip"
+  ]
 }
