--- a/package.json
+++ b/package.json
@@ -42,21 +42,25 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.6.3",
     "axios-rate-limit": "^1.3.0",
-    "axios-retry": "^3.5.1",
+    "axios-retry": "^4.0.0",
     "canvas": "^2.11.2",
     "colortranslator": "^1.9.2",
     "deepmerge": "^4.2.2",
     "docx": "^8.2.1",
+    "dompurify": "^3.0.6",
     "himalaya": "^1.1.0",
     "image-size": "^1.0.1",
     "jest": "^28.1.2",
+    "jsdom": "^23.0.1",
     "ts-deepmerge": "^2.0.1",
-    "zod": "^3.17.3"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^28.1.5",
+    "@types/jsdom": "^21.1.6",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
